notes/dictionaries
>>> d = {'a':111, 'b':222, 'c':333}
>>> d
{'a': 111, 'c': 333, 'b': 222}
>>> d.keys()
['a', 'c', 'b']
>>> d.values()
[111, 333, 222]
>>> for k in d.keys():
...     print k
... 
a
c
b
>>> for k in d.keys():
...     print d[k]
... 
111
333
222
>>> d.items()
[('a', 111), ('c', 333), ('b', 222)]
>>> for k,v in d.items():
...     print k,v
... 
a 111
c 333
b 222
>>> for v in d.values():
...     print v
... 
111
333
222
>>> d.values()
[111, 333, 222]
>>> d['e']=555
>>> d['f']=666
>>> d['aa']=122
>>> d
{'a': 111, 'aa': 122, 'c': 333, 'b': 222, 'e': 555, 'f': 666}
>>> x = sorted(d.keys())
>>> x
['a', 'aa', 'b', 'c', 'e', 'f']
>>> x = sorted(d.values())
>>> x
[111, 122, 222, 333, 555, 666]
>>> d.pop('aa')
122
>>> d
{'a': 111, 'c': 333, 'b': 222, 'e': 555, 'f': 666}
>>> d.pop('f')
666
>>> d
{'a': 111, 'c': 333, 'b': 222, 'e': 555}
>>> k = 'c'
>>> del d[k]
>>> d
{'a': 111, 'b': 222, 'e': 555}
>>> v = del d['e']
  File "<stdin>", line 1
    v = del d['e']
          ^
SyntaxError: invalid syntax
>>> v = d.pop('e')
>>> v
555
>>> d
{'a': 111, 'b': 222}
>>> 

